assets/css/style.css
/* ... */
footer:after {
  content: " ";
  display: block;
  clear: both;
}
footer #socialmedia {
  text-align: center;
}
footer #socialmedia ul {
  list-style: none;
}
footer #socialmedia ul li {
  display: inline-block;
  padding: 0 10px;
}
footer #socialmedia ul li a.badge.social {
  background: transparent;
  font-size: 1.3em;
  padding: 10px 12px;
  text-align: center;
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  -ms-border-radius: 50%;
  -o-border-radius: 50%;
  border-radius: 50%;
  color: #FFFFFF;
  box-sizing: border-box;
}
footer #socialmedia ul li a.badge.social.facebook {
  padding: 10px 14px;
}
footer #socialmedia ul li a.badge.social.gplus {
  padding: 10px 8px;
}
footer #socialmedia ul li a.badge.social.twitter:hover {
  background: #55acee;
}
footer #socialmedia ul li a.badge.social.facebook:hover {
  background: #3b5998;
}
footer #socialmedia ul li a.badge.social.youtube:hover {
  background: #FFFFFF;
  color: #DF4848;
}
footer #socialmedia ul li a.badge.social.gplus:hover {
  background: #db4b39;
  color: #FFFFFF;
}
footer #socialmedia ul li a.badge.social.github:hover {
  background: #FFFFFF;
  color: #24292E;
}
/* media query section*/
@media (min-width: 0) and (max-width: 650px) {
  header .fullheight .hgroup {
    padding: 150px 0 100px 0;
  }
  header .fullheight .hgroup h1 {
    font-size: 2.2em;
    padding: 35px 10px;
    margin-bottom: 50px;
  }
  header .fullheight .hgroup h2 {
    margin-bottom: 50px;
  }
  header #nav .navbar ul li a {
    padding: 5px 13px;
    font-size: 1em;
  }
  header #nav .navbar ul li a::after {
    content: '\000a0';
    display: block;
  }
  header #nav .navbar ul li a span {
    display: none;
  }
  #CYFinfo #moreDetails {
    padding:20px 8px;
  }
  #apply article {
    padding: 20px 20px;
    margin-top: 30px;
    margin-bottom: 35px;
  }
  #apply article.content h1 span{
    display: none;
  }
  #apply article .contactUs .form_group {
    flex-direction: column;
    padding: 5px 0;
  }
  #apply article .contactUs .form_group label {
    flex-basis: 100%;
    align-self: baseline;
    margin-bottom: 5px;
  }
  #apply article .contactUs .form_group div input {
    width: 60%;
    padding: 3px 5px;
    border-radius: 5px;
  }
  #apply article .contactUs .form_group div textarea{
    margin-left: 0px;
    width: 20em;
  }
  #apply article .contactUs .form_group div button{
    margin-left: 70px;
  }
  #apply article .contactUs .form_group:nth-of-type(5) label{
    display: none;
  }
  footer #socialmedia ul li {
    display: inline-block;
    padding: 0 0px;
  }
}
@media (min-width: 450px) and (max-width: 650px) {
  #CYFinfo #CYFFocus section#networking,
  #CYFinfo #CYFFocus section#technology{
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    width: 50%;
    float: left;
    padding-left: 5%;
    padding-right: 5%;
  }
}
@media (min-width: 650px) {
  #welcome article {
    max-width: 33em;
    margin-left: auto;
    margin-right: auto;
    padding: 60px 0;
  }
  #welcome article:after {
    content: " ";
    display: block;
    clear: both;
  }
  #CYFinfo #CYFFocus section {
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    width: 33.33333%;
    float: left;
    padding-left: 3.33333%;
    padding-right: 3.33333%;
  }
  #news #newsIntro {
    margin-bottom: 30px;
  }
  #news #newsIntro h1 {
    font-weight: 200;
    font-size: 2.5em;
  }
  #news #newsIntro p {
    font-size: 1.5em;
    line-height: 140%;
  }
  #news section {
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    width: 33.33333%;
    float: left;
    padding-left: 0.83333%;
    padding-right: 0.83333%;
  }
  #news section h2 {
    font-size: 1.2em;
    line-height: 120%;
    color: #CD0069;
  }
  #news section p {
    padding-top: 10px;
    font-size: 1em;
    line-height: 130%;
  }
}
@media (max-width: 650px) {
  header #nav .navbar .brand a {
    font-size: 1.2em;
  }
  header #nav .navbar .brand a span.full {
    display: none;
  }
  header #nav .navbar .brand a span.abbreviation {
    display: inline;
  }
}
@media (min-width: 650px) and (max-width: 960px) {
  header .fullheight .hgroup {
    padding: 200px 0 225px 0;
  }
  header #nav .navbar ul li a {
    padding-left: 10px;
  }
}
@media (min-width: 960px) {
  .scene article {
    max-width: 60em;
    margin-left: auto;
    margin-right: auto;
  }
}
@media (min-width: 1200px) {
  .scene {
    padding: 40px 0;
  }
  #CYFinfo #moreDetails {
    background-size: 400px;
    background-repeat: no-repeat;
    background-position: 120% center;
  }
}

